# codespaces-blank

./: .gitignore  README.md
public/crons/: bg.bat  castle.bat  cron_10min.sh  cron_achievement_rating.php  cron_activity.php  cron_adv_chaot.php  cron_adv_chaot.sh  cron_adv_chaot_v1.php  cron_adv_chaot_v2.php  cron_adv_chato_vOld.php  cron_adv_message.php  cron_afk.php  cron_artifact.php  cron_auction.php  cron_blindauction.php  cron_boss_planner.php  cron_boss_scheduler.sh  cron_clan_members.php  cron_clan_rating.php  cron_clan_season.php  cron_clan_stat.php  cron_cleanup.php  cron_cleanup_4.php  cron_cleanup_diff.php  cron_daily.sh  cron_export.php  cron_fight_stat.php  cron_filelist.php  cron_generate_cache.php  cron_hourly.sh  cron_import.php  cron_import_fix.php  cron_loan.php  (+80 more)
public/demons/chatd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
public/demons/chatd/php/: chat_get.php  chat_send.php  chatd_test.php  raw_load_test.php  runchatdtests.php
public/demons/chatd/php/include/: config.inc  object.inc  objects.inc  wbds.inc
public/demons/chatd/php/lib/: chat.lib
public/demons/chatd/php/test/: ChangeLog  README  phpunit.php  phpunit_test.php  runtests2.php  socketTestResult.php
public/demons/chatd/src/: cdaio.cpp  cdaio.h  cdcollection.cpp  cdcollection.h  cdcommon.cpp  cdcommon.h  cddebug.cpp  cddebug.h  cdentry.cpp  cdentry.h  cdgc.cpp  cdgc.h  cdgreeter.cpp  cdgreeter.h  cdlock.cpp  cdlock.h  cdobjdefs.cpp  cdobjdefs.h  cdstoragemgr.cpp  cdstoragemgr.h  cdworker.cpp  cdworker.h  cdwriteback.cpp  cdwriteback.h  chatd.cpp  chatd.h
(+534 files in other folders)
